<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Registarusuario">

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="659dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_registrarusuario"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/TituloRegistroUsuario"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/EdtNombreR"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="@string/txtname"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtnumarea" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/Sarea1R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/Sarea2R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:id="@+id/EdtPhoneR"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/txttelefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/EdtemailR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/TxtCorreo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/EdtcontrasenaR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/TxtContrasena"
            android:inputType="textPassword"
             />

        <EditText
            android:id="@+id/EdtcontrasenaConfirmacionR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtConfirmacion"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/BtnRegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtBtnRegistrarUsuario" />
        <TextView
            android:id="@+id/txt_Mensaje"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text=""
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>